# pam_facial_auth

./: CMakeLists.txt  FaceRecWrapper.h  FacialAuth.cpp  FacialAuth.h  README.md  Utils.cpp  Utils.h  build_pam_facial_auth_refactor.sh  facial_test.cpp  facial_training.cpp  pam_facial_auth-2.0.ebuild  run_training.cpp
debian/: changelog  control  install  postinst
etc/: pam_facial.conf  pam_facial_auth.conf
gentoo/sys-auth/pam_facial_auth/: pam_facial_auth-9999.ebuild
include/: FacialAuth.h  lbifacialauth.h  libfacialauth.h  pam_facial_auth.h
man/: facial_capture.1  facial_test.1  facial_training.1  pam-facial-auth.8  pam_facial_auth.1  pam_facial_auth.8
rpm/: pam_facial_auth.spec
src/: FaceRecWrapper.cpp  FaceRecWrapper.h  FacialAuth.cpp  FacialAuth.h  Utils.cpp  Utils.h  facial_capture.cpp  facial_test.cpp  facial_training.cpp  libfacialauth.cpp  pam_facial_auth.c  pam_facial_auth.cpp
src/plugins/: plugin_classic.cpp  plugin_sface.cpp
